// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET-Requests of SubmissionController (e2e) (GET) /courses/:courseId/submissions Retrieves all submissions 1`] = `
Array [
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T08:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": null,
    "payload": null,
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T07:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": Array [
      Object {
        "name": "Link 1",
        "url": "http://example.url",
      },
      Object {
        "name": "Link 2",
        "url": "http://example.url",
      },
    ],
    "payload": Object {
      "error": "Something went wrong.",
    },
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
]
`;

exports[`GET-Requests of SubmissionController (e2e) (GET) /courses/:courseId/submissions/groups/:groupId/assignments/:assignmentId Retrieves all submissions of a group for an assignment 1`] = `
Array [
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T08:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": null,
    "payload": null,
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T07:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": Array [
      Object {
        "name": "Link 1",
        "url": "http://example.url",
      },
      Object {
        "name": "Link 2",
        "url": "http://example.url",
      },
    ],
    "payload": Object {
      "error": "Something went wrong.",
    },
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
]
`;

exports[`GET-Requests of SubmissionController (e2e) (GET) /courses/:courseId/submissions/users/:user/assignments/:assignments Retrieves the latest submission of a user (or their group) for an assignment 1`] = `
Object {
  "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
  "date": "2020-02-02T08:42:00.000Z",
  "displayName": "Max Mustermann",
  "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
  "links": null,
  "payload": null,
  "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
}
`;

exports[`GET-Requests of SubmissionController (e2e) (GET) /courses/:courseId/submissions/users/:userId Retrieves all submissions of user 1`] = `
Array [
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T08:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": null,
    "payload": null,
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
  Object {
    "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
    "date": "2020-02-02T07:42:00.000Z",
    "displayName": "Max Mustermann",
    "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
    "groupName": "Testgroup 1",
    "links": Array [
      Object {
        "name": "Link 1",
        "url": "http://example.url",
      },
      Object {
        "name": "Link 2",
        "url": "http://example.url",
      },
    ],
    "payload": Object {
      "error": "Something went wrong.",
    },
    "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
  },
]
`;

exports[`POST-Requests of SubmissionController (e2e) (POST) /courses/:courseId/submissions/assignments/:assignmentId Adds a submission 1`] = `
Object {
  "assignmentId": "b2f6c008-b9f7-477f-9e8b-ff34ce339077",
  "date": "2021-04-26T14:41:52.897Z",
  "displayName": "Max Mustermann",
  "groupId": "b4f24e81-dfa4-4641-af80-8e34e02d9c4a",
  "links": Array [
    Object {
      "name": "Link 1",
      "url": "http://example.url",
    },
    Object {
      "name": "Link 2",
      "url": "http://example.url",
    },
  ],
  "payload": Object {
    "error": "Something went wrong.",
  },
  "userId": "a019ea22-5194-4b83-8d31-0de0dc9bca53",
}
`;
